// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should get card by id from the DynamoDB 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test",
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "secondary": false,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "test",
  "lineText": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test2",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen",
    "fi": "Testfi",
    "sv": "Testsv",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [],
  "seaLevel": undefined,
  "speedLimit": undefined,
  "status": "PUBLIC",
  "temporaryNotifications": [
    {
      "content": {
        "en": "",
        "fi": "",
        "sv": "",
      },
      "endDate": "",
      "startDate": "",
    },
  ],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [],
            "type": "Point",
          },
          "id": 681017200,
          "name": {
            "en": "",
            "fi": "",
            "sv": "",
          },
          "pilotJourney": undefined,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windGauge": undefined,
  "windRecommendation": undefined,
}
`;

exports[`should get card by id from the DynamoDB when cache expired 1`] = `
{
  "additionalInfo": undefined,
  "anchorage": undefined,
  "attention": undefined,
  "creationTimestamp": Any<Number>,
  "creator": "test2",
  "designSpeed": undefined,
  "fairwayIds": "#1#",
  "fairways": [
    {
      "id": 1,
      "primary": true,
      "secondary": false,
    },
  ],
  "generalInfo": undefined,
  "group": undefined,
  "harbors": undefined,
  "iceCondition": undefined,
  "id": "test",
  "lineText": undefined,
  "modificationTimestamp": Any<Number>,
  "modifier": "test",
  "n2000HeightSystem": false,
  "name": {
    "en": "Testen2",
    "fi": "Testfi2",
    "sv": "Testsv2",
  },
  "navigationCondition": undefined,
  "pictures": undefined,
  "pilotRoutes": [],
  "seaLevel": undefined,
  "speedLimit": undefined,
  "status": "DRAFT",
  "temporaryNotifications": [
    {
      "content": {
        "en": "",
        "fi": "",
        "sv": "",
      },
      "endDate": "",
      "startDate": "",
    },
  ],
  "trafficService": {
    "pilot": {
      "email": undefined,
      "extraInfo": undefined,
      "fax": undefined,
      "internet": undefined,
      "phoneNumber": undefined,
      "places": [
        {
          "geometry": {
            "coordinates": [
              28.17,
              61.5228333,
            ],
            "type": "Point",
          },
          "id": 3458100305,
          "name": {
            "en": "Puumala2",
            "fi": "Puumala2",
            "sv": "Puumala2",
          },
          "pilotJourney": undefined,
        },
      ],
    },
    "tugs": null,
    "vts": null,
  },
  "vesselRecommendation": undefined,
  "visibility": undefined,
  "windGauge": undefined,
  "windRecommendation": undefined,
}
`;
